project image stretch fix attempt

--- a/src/pages/project.css
+++ b/src/pages/project.css
@@ -69,11 +69,12 @@
     width: 100vw;
     flex-direction: column;
     align-items: center;
-    margin-left: -30px;
+    margin-left: -20px;
     margin-bottom: var(--big-padding);
   }
 
   .new-project-image {
     width: 80%;
+    height: fit-content;
   }
 }
